2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_value_copy and g_value_transform
	bindings, fixes bug 523767

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaobjecttype.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasignal.vala:

	Check return type and parameters of signal handlers

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:

	Use lazy initialization for type_argument_list in DataType class
	to improve performance

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vala/valadynamicmethod.vala:
	* vala/valadynamicproperty.vala:
	* vala/valasymbol.vala:
	* gobject/valaccodedynamicpropertybinding.vala:

	Add support for dynamic properties of GObjects

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicsignalbinding.vala:

	Add support for dynamic signals of GObjects

2008-05-30  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/packages/gstreamer-0.10/: fix Gst.Pad.push_event
	ownership transfer

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-30  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala:

	Use lazy initialization for error_types list in CodeNode class
	to improve performance

2008-05-29  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala:
	* vala/valaclass.vala:
	* vala/valacodecontext.vala:
	* vala/valacodenode.vala:
	* vala/valadatatype.vala:
	* vala/valadelegatetype.vala:
	* vala/valadynamicmethod.vala:
	* vala/valadynamicproperty.vala:
	* vala/valaenum.vala:
	* vala/valaerrordomain.vala:
	* vala/valaforstatement.vala:
	* vala/valainitializerlist.vala:
	* vala/valainterface.vala:
	* vala/valainterfacewriter.vala:
	* vala/valainvocationexpression.vala:
	* vala/valalambdaexpression.vala:
	* vala/valamember.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethod.vala:
	* vala/valamethodtype.vala:
	* vala/valanamespace.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaobjecttypesymbol.vala:
	* vala/valapointertype.vala:
	* vala/valasemanticanalyzer.vala: